--- a/balloons/manifest.json
+++ b/balloons/manifest.json
@@ -5,8 +5,8 @@
   "theme_color": "#212121",
   "background_color": "#212121",
   "display": "fullscreen",
-  "scope": "/",
-  "start_url": "/balloons",
+  "scope": "/balloons",
+  "start_url": "/balloons/",
   "icons": [
     {
       "src": "assets/icons/icon-72x72.png",
