--- a/balloons/manifest.json
+++ b/balloons/manifest.json
@@ -6,7 +6,7 @@
   "background_color": "#212121",
   "display": "fullscreen",
   "scope": "/balloons",
-  "start_url": "/balloons/",
+  "start_url": ".",
   "icons": [
     {
       "src": "assets/icons/icon-72x72.png",
