--- a/balloons/manifest.json
+++ b/balloons/manifest.json
@@ -5,7 +5,7 @@
   "theme_color": "#212121",
   "background_color": "#212121",
   "display": "fullscreen",
-  "scope": "/balloons",
+  "scope": ".",
   "start_url": ".",
   "icons": [
     {
